# ironclaw

./: .gitignore  Cargo.toml  IRONCLAW_IMPLEMENT_PROMPT.txt  README.md  SPEC.md  TODO.md  agent.txt  biome.toml  changelog.txt  rust-toolchain.toml
configs/: ironclawd.firecracker.toml  ironclawd.guest-autonomous.toml  ironclawd.guest-tools.toml  irowclaw.allow-bash.toml
crates/common/: Cargo.toml  build.rs
crates/common/examples/: firecracker_vsock_roundtrip.rs
crates/common/proto/: ironclaw.proto
crates/common/src/: auth_transport.rs  cgroup.rs  codec.rs  config.rs  disk_quota.rs  firecracker.rs  lib.rs  logging.rs  network_firewall.rs  proto.rs  protocol.rs  slack.rs  stream_transport.rs  transport.rs
crates/common/tests/: core_module_test.rs
crates/ironclawd/: Cargo.toml
crates/ironclawd/src/: auth_transport.rs  daemon.rs  host_tools.rs  llm_client.rs  main.rs  soul_guard.rs  whatsapp.rs
crates/ironclawd/tests/: channel_test.rs  daemon_start_stop_test.rs
crates/irowclaw/: Cargo.toml
crates/irowclaw/src/: lib.rs  main.rs  runtime.rs  runtime_loop_test.rs  safety_test.rs  scheduler.rs  scheduler_test.rs  vsock_transport.rs  vsock_transport_test.rs
crates/memory/: Cargo.toml
crates/memory/src/: lib.rs  lib_test.rs
crates/memory/tests/: hybrid_memory_test.rs
crates/security/: Cargo.toml
crates/security/src/: auth.rs  lib.rs  pairing.rs  rate_limiter.rs
crates/security/tests/: pairing_flow_test.rs
crates/tools/: Cargo.toml
crates/tools/src/: lib.rs  lib_test.rs
docs/: architecture.html  whatsapp_setup.txt
docs/implementation-plans/: channel-abstraction.md
rootfs/guest-skel/: init
scripts/: build-guest-rootfs.sh  smoke-firecracker-ws.mjs  smoke-firecracker-ws.sh  smoke-firecracker.sh  smoke-guest-browser-ws.sh  smoke-guest-tools-ws.mjs  smoke-guest-tools-ws.sh  smoke-local-guest.sh  smoke-local-ws.mjs
ui/: app.css  app.js  index.html
