[package]
name = "ironclawd"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum = { version = "*", features = ["ws"] }
common = { path = "../common" }
dirs = "*"
futures = "*"
include_dir = "*"
irowclaw = { path = "../irowclaw" }
memory = { path = "../memory" }
security = { path = "../security" }
mime_guess = "*"
nix = { version = "*", features = ["signal"] }
reqwest = { version = "*", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "*", features = ["bundled"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
thiserror = "*"
tokio = { version = "*", features = [
  "macros",
  "rt-multi-thread",
  "time",
  "process",
  "fs",
  "signal",
] }
toml = "*"
tracing = "*"
tracing-subscriber = "*"
rand = "*"
hex = "*"
sha2 = "*"
async-trait = "*"
whatsapp-rust = "0.2"
wacore = "0.2"
waproto = "0.2"
wacore-binary = "0.2"
qr2term = "0.3"
log = "0.4"

[features]
firecracker = ["common/firecracker"]
