[package]
name = "irowclaw"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = "*"
common = { path = "../common" }
memory = { path = "../memory" }
rusqlite = { version = "*", features = ["bundled"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
thiserror = "*"
tokio = { version = "*", features = ["macros", "rt-multi-thread", "io-std", "io-util", "net", "time"] }
tokio-vsock = "*"
toml = "*"
tools = { path = "../tools" }
